
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct bufferevent {int dummy; } ;



__attribute__((used)) static void
pair_flush_eventcb(struct bufferevent *bev, short what, void *ctx)
{
 int *callback_what = ctx;
 *callback_what = what;
}
